--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -1,11 +1,13 @@
 <div class="as-calendar-timetable__row as-calendar-timetable__row--highlighted">
   <div class="as-calendar-timetable__first-column">
-    {{as-calendar/time-zone-select
-      value=timeZone
-      options=timeZoneOptions
-      defaultQuery=defaultTimeZoneQuery
-      showSearch=showTimeZoneSearch
-      onChangeTimeZone=(action this.attrs.onChangeTimeZone)}}
+    {{#if showTimeZone}}
+      {{as-calendar/time-zone-select
+        value=timeZone
+        options=timeZoneOptions
+        defaultQuery=defaultTimeZoneQuery
+        showSearch=showTimeZoneSearch
+        onChangeTimeZone=(action this.attrs.onChangeTimeZone)}}
+    {{/if}}
   </div>
 
   <div class="as-calendar-timetable__columns">
